<resources>
    <string name="app_name">TheHatGame</string>
    <string name="Title">The Hat Game</string>
    <string name="Button_Play">Play</string>
    <string name="Button_Rules">Rules</string>
    <string name="Button_Single_Phone">Single Phone Game</string>
    <string name="Button_Multi_Phone">Multiphone Game</string>
    <string name="Button_Send">Send</string>
    <string name="Text_Rules">The rules of the game go here. Does this multiline or do i need to use a different thing.</string>
    <string name="Text_passcode">Enter a passcode</string>
    <string name="Text_seekplay">4</string>
    <string name="Text_seekinput">3</string>
    <string name="Text_names">Name</string>
    <string name="Button_select">Select Name</string>
    <string name="Text_inTitle">Single Player</string>
</resources>
